[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gigachain-experimental"
version = "0.0.65"
description = "Building applications with LLMs through composability"
authors = []
license = "MIT"
readme = "README.md"
repository = "https://github.com/ai-forever/gigachain"
packages = [
    {include = "langchain_experimental"}
]

[tool.mypy]
ignore_missing_imports = "True"
disallow_untyped_defs = "True"
exclude = [ "notebooks", "examples", "example_data",]

[tool.poetry.urls]
"Source Code" = "https://github.com/ai-forever/gigachain/tree/master/libs/experimental"
"Release Notes" = "https://github.com/ai-forever/gigachain/releases?q=tag%3A%22gigachain-experimental%3D%3D0%22&expanded=true"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
gigachain-core = "^0.2.38"
gigachain-community = "^0.2.16"

[tool.ruff.lint]
select = [ "E", "F", "I", "T201",]

[tool.coverage.run]
omit = [ "tests/*",]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --durations=5"
markers = [ "requires: mark tests as requiring a specific library", "asyncio: mark tests as requiring asyncio", "compile: mark placeholder test used to compile integration tests without running them",]
asyncio_mode = "auto"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.typing]
optional = true

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test_integration]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = "^0.5"

[tool.poetry.group.typing.dependencies]
mypy = "^1.10"
types-pyyaml = "^6.0.12.2"
types-requests = "^2.28.11.5"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
setuptools = "^67.6.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.0"
pytest-asyncio = "^0.20.3"
[[tool.poetry.group.test.dependencies.numpy]]
version = "^1.24.0"
python = "<3.12"

[[tool.poetry.group.test.dependencies.numpy]]
version = "^1.26.0"
python = ">=3.12"

[tool.poetry.group.typing.dependencies.gigachain]
path = "../langchain"
develop = true

[tool.poetry.group.typing.dependencies.gigachain-core]
path = "../core"
develop = true

[tool.poetry.group.typing.dependencies.gigachain-community]
path = "../community"
develop = true

[tool.poetry.group.dev.dependencies.gigachain]
path = "../langchain"
develop = true

[tool.poetry.group.dev.dependencies.gigachain-core]
path = "../core"
develop = true

[tool.poetry.group.dev.dependencies.gigachain-community]
path = "../community"
develop = true

[tool.poetry.group.test.dependencies.gigachain]
path = "../langchain"
develop = true

[tool.poetry.group.test.dependencies.gigachain-core]
path = "../core"
develop = true

[tool.poetry.group.test.dependencies.gigachain-community]
path = "../community"
develop = true

[tool.poetry.group.test.dependencies.gigachain-text-splitters]
path = "../text-splitters"
develop = true

[tool.poetry.group.test_integration.dependencies.gigachain]
path = "../langchain"
develop = true

[tool.poetry.group.test_integration.dependencies.gigachain-core]
path = "../core"
develop = true

[tool.poetry.group.test_integration.dependencies.gigachain-community]
path = "../community"
develop = true

[tool.poetry.group.test_integration.dependencies.gigachain-openai]
path = "../partners/openai"
develop = true
